--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                           <label for="exampleInputPassword1" class="form-label">Email</label>
                           <input type="email" class="form-control" id="exampleInputPassword1">
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-success">Submit</button>
                       </form>
                 </div>
             </div>
