--- a/index.html
+++ b/index.html
@@ -157,7 +157,11 @@
             </div>
         </div>
 
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,96L30,128C60,160,120,224,180,256C240,288,300,288,360,250.7C420,213,480,139,540,106.7C600,75,660,85,720,101.3C780,117,840,139,900,170.7C960,203,1020,245,1080,229.3C1140,213,1200,139,1260,138.7C1320,139,1380,213,1410,250.7L1440,288L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#fff" fill-opacity="1"
+                d="M0,96L30,128C60,160,120,224,180,256C240,288,300,288,360,250.7C420,213,480,139,540,106.7C600,75,660,85,720,101.3C780,117,840,139,900,170.7C960,203,1020,245,1080,229.3C1140,213,1200,139,1260,138.7C1320,139,1380,213,1410,250.7L1440,288L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z">
+            </path>
+        </svg>
     </section>
 
     <!-- end projet -->
@@ -174,25 +178,40 @@
             </div>
             <div class="row d-flex justify-content-center my-5">
                 <div class="col-6">
-                    <form>
+                    <div class="alert alert-success alert-dismissible fade show d-none my-alertt" role="alert">
+                        <strong>Terima Kasih</strong> Pesan anda telah kami terima!!
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    <form name="submit-contact-form">
                         <div class="mb-3">
-                          <label for="text" class="form-label">Nama Lengkap</label>
-                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            <label for="exampleInputEmail1" class="form-label">Nama</label>
+                            <input type="text" class="form-control" id="text" aria-describedby="text" name="nama">
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputPassword1" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="exampleInputPassword1" name="email">
                         </div>
                         <div class="mb-3">
                             <label for="pesan" class="form-label">pesan</label>
-                            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                          </div>
-                        <div class="mb-3">
-                          <label for="exampleInputPassword1" class="form-label">Email</label>
-                          <input type="email" class="form-control" id="exampleInputPassword1">
+                            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                                name="pesan">
                         </div>
-                        <button type="submit" class="btn btn-success">Submit</button>
-                      </form>
+                        <button type="submit" class="btn btn-primary btn-kirim">Submit</button>
+
+                        <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+                            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                            Loading...
+                        </button>
+
+                    </form>
                 </div>
             </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="1" d="M0,64L30,101.3C60,139,120,213,180,240C240,267,300,245,360,213.3C420,181,480,139,540,133.3C600,128,660,160,720,160C780,160,840,128,900,112C960,96,1020,96,1080,117.3C1140,139,1200,181,1260,192C1320,203,1380,181,1410,170.7L1440,160L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#0d6efd" fill-opacity="1"
+                d="M0,64L30,101.3C60,139,120,213,180,240C240,267,300,245,360,213.3C420,181,480,139,540,133.3C600,128,660,160,720,160C780,160,840,128,900,112C960,96,1020,96,1080,117.3C1140,139,1200,181,1260,192C1320,203,1380,181,1410,170.7L1440,160L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z">
+            </path>
+        </svg>
     </section>
 
 
@@ -201,26 +220,54 @@
     <!-- footer -->
 
     <footer class="bg-primary text-light text-center">
-        <p>Create White <i class="bi bi-heart-fill"></i> by 
-            <a href="https://www.youtube.com/watch?v=LkR-9Z1sle8&list=PLFIM0718LjIV46XyERoDIlBWl2tMmmm8X" class="fw-bold text-light">Luki irwanto</a>
+        <p>Create White <i class="bi bi-heart-fill"></i> by
+            <a href="https://www.youtube.com/watch?v=LkR-9Z1sle8&list=PLFIM0718LjIV46XyERoDIlBWl2tMmmm8X"
+                class="fw-bold text-light">Luki irwanto</a>
         </p>
-        
+
     </footer>
-    
+
 
     <!-- end footer -->
-
-
-
-
-
-
-
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbxDw-zh2c-qMGRjC0j9wm_MAwVQOlG93LwUbNk3eBtGMUlRsX1xdeHkGcx65ZQm07jcDA/exec'
+        const form = document.forms['submit-contact-form']
+
+        const btnKirim = document.querySelector('.btn-kirim')
+        const btnLoading = document.querySelector('.btn-loading')
+        const myAlert = document.querySelector('.my-alertt')
+
+        form.addEventListener('submit', e => {
+            e.preventDefault()
+
+            //ketika tombol submit di click
+            //tampilkan btn loading hilangkan btn kirim
+            btnLoading.classList.toggle("d-none")
+            btnKirim.classList.toggle("d-none")
+
+
+            fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+                .then(response => {
+                    //tampilkan btn kirim hilangkan btn loading
+                    btnLoading.classList.toggle("d-none")
+                    btnKirim.classList.toggle("d-none")
+                    //tampilkan alert
+                    myAlert.classList.toggle("d-none")
+                    //riset form nya
+                    form.reset();
+
+
+                    console.log('Success!', response)
+                })
+                .catch(error => console.error('Error!', error.message))
+        })
+    </script>
 
 </body>
 
