--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+    <!-- my css -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <title>AEROFOX CAMPENY</title>
 </head>
@@ -17,11 +24,11 @@
 <body id="home">
     <!-- Navbar -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow shadow-sm fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark shadow shadow-sm fixed-top p-3" style="background-color: #be5f10;">
         <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="img/—Pngtree—corporate image logo free logo_1026060.png" style="width: 30px; height: 24px;"
-                    alt="">
+            <a class="navbar-brand fs-2" href="#">
+                <img src="img/pngtree-fox-logo-vector-png-image_9125106.png" style="width: 50px; height: 50px;"
+                    class="rounded-circle" alt="">
                 AEROFOX
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -30,10 +37,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
-                    <a class="nav-link active" aria-current="page" href="#home">Home</a>
-                    <a class="nav-link" href="#about">Abaout</a>
-                    <a class="nav-link" href="#project">Project</a>
-                    <a class="nav-link" href="#contact">Contact</a>
+                    <a class="nav-link fs-5 active" aria-current="page" href="#home">Home</a>
+                    <a class="nav-link fs-5" href="#about">Abaout</a>
+                    <a class="nav-link fs-5" href="#service">Service</a>
+                    <a class="nav-link fs-5" href="#contact">Contact</a>
 
                 </div>
             </div>
@@ -44,10 +51,11 @@
 
     <!-- jumbotron -->
 
-    <section class="jumbotron text-center pt-5" style="background-color: #e2edff;">
-        <img src="img/—Pngtree—corporate image logo free logo_1026060.png" width="200" alt="logo-profil">
-        <h1 class="display-4">AEROFOX COMPENY</h1>
-        <p class="lead">WEB DESIGN | UI/UX DEGIGN | APP APPLICATION</p>
+    <section class="jumbotron text-center my-5" style="background-color: #fd7e14; padding: 0;">
+        <img src="img/pngtree-fox-logo-vector-png-image_9125106.png" width="200" alt="logo-profil"
+            class="rounded-circle my-5">
+        <h1 class="name-company display-4">AEROFOX COMPENY</h1>
+        <p class="lead"></p>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#fff" fill-opacity="1"
                 d="M0,320L30,282.7C60,245,120,171,180,170.7C240,171,300,245,360,261.3C420,277,480,235,540,213.3C600,192,660,192,720,197.3C780,203,840,213,900,186.7C960,160,1020,96,1080,96C1140,96,1200,160,1260,197.3C1320,235,1380,245,1410,250.7L1440,256L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z">
@@ -62,7 +70,7 @@
 
     <!-- About -->
 
-    <section id="about">
+    <section id="about" class="pt-5">
         <div class="container m-5">
             <div class="row text-center">
                 <div class="col">
@@ -70,10 +78,12 @@
                 </div>
             </div>
             <div class="row d-flex justify-content-center my-3">
-                <div class="col-md-6 text-center fs-4 mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                <div class="col-md-6 text-center fs-4 mt-3" data-aos="fade-right" data-aos-duration="1000">Lorem ipsum
+                    dolor sit, amet consectetur adipisicing elit.
                     Cumque impedit, magni ipsa quod atque eum sapiente earum labore possimus laboriosam consequatur!
                     Facilis doloremque.</div>
-                <div class="col-md-6 text-center fs-4 mt-3"> Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                <div class="col-md-6 text-center fs-4 mt-3" data-aos="fade-left" data-aos-duration="1000"> Lorem ipsum
+                    dolor sit amet consectetur adipisicing elit.
                     Ullam similique adipisci
                     itaque illum odit esse in atque cupiditate deleniti porro alias ipsa consequatur, molestias culpa.
                 </div>
@@ -81,7 +91,7 @@
 
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#e2edff" fill-opacity="1"
+            <path fill="#fd7e14" fill-opacity="1"
                 d="M0,192L30,181.3C60,171,120,149,180,149.3C240,149,300,171,360,149.3C420,128,480,64,540,64C600,64,660,128,720,138.7C780,149,840,107,900,85.3C960,64,1020,64,1080,90.7C1140,117,1200,171,1260,213.3C1320,256,1380,288,1410,304L1440,320L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z">
             </path>
         </svg>
@@ -89,68 +99,63 @@
 
     <!-- End About -->
 
-    <!-- project -->
+    <!-- service -->
 
-    <section id="project" style="background-color: #e2edff;">
-        <div class="container">
+    <section class="pt-5" id="service" style="background-color: #fd7e14; padding: 0;">
+        <div class="container m-5">
             <div class="row text-center">
                 <div class="col">
-                    <h2>My Project</h2>
+                    <h2>SERVICE</h2>
                 </div>
             </div>
             <div class="row m-5 justify-content-center">
-                <div class="col-md-4 mb-3">
-                    <div class="card">
-                        <img src="img/—Pngtree—corporate image logo free logo_1026060.png" class="card-img-top"
-                            alt="webdesign">
+                <div class="col-md-4 mb-3  my-4">
+                    <div class="card" data-aos="zoom-in" data-aos-duration="1000">
+                        <img src="img/service1.png" class="card-img-top" alt="webdesign">
                         <div class="card-body">
                             <h5 class="card-title text-center">WEB DESIGN</h5>
 
-                            <a href="#" class="btn btn-primary d-flex justify-content-center">CLICK</a>
+                            <a href="#" class="btn btn-warning d-flex justify-content-center">CLICK</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mb-3">
-                    <div class="card">
-                        <img src="img/—Pngtree—corporate image logo free logo_1026060.png" class="card-img-top"
-                            alt="ui/uxdesign">
+                <div class="col-md-4 mb-3 my-4">
+                    <div class="card" data-aos="zoom-in" data-aos-duration="1000">
+                        <img src="img/service2.png" class="card-img-top" alt="ui/uxdesign">
                         <div class="card-body">
                             <h5 class="card-title text-center">UI/UX DESIGN</h5>
 
-                            <a href="#" class="btn btn-primary d-flex justify-content-center">CLICK</a>
+                            <a href="#" class="btn btn-warning d-flex justify-content-center">CLICK</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mb-3">
-                    <div class="card">
-                        <img src="img/—Pngtree—corporate image logo free logo_1026060.png" class="card-img-top"
-                            alt="appaplication">
+                <div class="col-md-4 mb-3 my-4">
+                    <div class="card" data-aos="zoom-in" data-aos-duration="1000">
+                        <img src="img/service3.png" class="card-img-top" alt="appaplication">
                         <div class="card-body">
                             <h5 class="card-title text-center">APP APPLICATION</h5>
 
-                            <a href="#" class="btn btn-primary d-flex justify-content-center">CLICK</a>
+                            <a href="#" class="btn btn-warning d-flex justify-content-center">CLICK</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mb-3">
-                    <div class="card">
-                        <img src="img/—Pngtree—corporate image logo free logo_1026060.png" class="card-img-top"
-                            alt="cybersecurity">
-                        <div class="card-body">
-                            <h5 class="card-title text-center">CYBER SECURITY</h5>
-
-                            <a href="#" class="btn btn-primary d-flex justify-content-center">CLICK</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-3">
-                    <div class="card">
-                        <img src="img/—Pngtree—corporate image logo free logo_1026060.png" class="card-img-top"
-                            alt="...">
+                <div class="col-md-4 mb-3 my-4">
+                    <div class="card" data-aos="zoom-in" data-aos-duration="1000">
+                        <img src="img/Data-analytics-Adalah-1-1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title text-center">DATA ANALIST</h5>
 
-                            <a href="#" class="btn btn-primary d-flex justify-content-center">CLICK</a>
+                            <a href="#" class="btn btn-warning d-flex justify-content-center">CLICK</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3 my-4">
+                    <div class="card" data-aos="zoom-in" data-aos-duration="1000">
+                        <img src="img/tren-keamanan-siber-di-dunia-IT.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center">CYBER SECURITY</h5>
+
+                            <a href="#" class="btn btn-warning d-flex justify-content-center">CLICK</a>
                         </div>
                     </div>
                 </div>
@@ -164,13 +169,73 @@
         </svg>
     </section>
 
-    <!-- end projet -->
+    <!-- end service -->
+
+
+    <!-- Galerry -->
+
+    <section id="galery" class="pt-5">
+        <div class="container m-5">
+            <div class="row text-center mb-3">
+                <div class="col">
+                    <h2>Gallery</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3 my-3 galery-img">
+                    <a href="">
+                        <img src="img/MINI-ART-GALLERY_01.jpg" alt="" class="img-fluid">
+                    </a>
+                </div>
+                <div class="col-md-3 my-3 galery-img">
+                    <a href="">
+                        <img src="img/WhatsApp-Image-2022-03-23-at-9.18.59-PM.jpeg" alt="" class="img-fluid">
+                    </a>
+                </div>
+                <div class="col-md-3 my-3 galery-img">
+                    <a href="">
+                        <img src="img/ekonomi_bisnis_2019_02_18_175034_big.webp" alt="" class="img-fluid">
+                    </a>
+                </div>
+                <div class="col-md-3 my-3 galery-img">
+                    <a href="">
+                        <img src="img/pameran-lukisan-di-grey-art-gallery-braga_169.jpeg" alt="" class="img-fluid">
+                    </a>
+                </div>
+                <div class="col-md-3 my-3 galery-img">
+                    <a href="">
+                        <img src="img/b5e653506659b8e7c668424ae5820197.webp" alt="" class="img-fluid">
+                    </a>
+                </div>
+                <div class="col-md-3 my-3 galery-img">
+                    <a href="">
+                        <img src="img/2-1.jpg" alt="" class="img-fluid">
+                    </a>
+                </div>
+                <div class="col-md-3 my-3 galery-img">
+                    <a href="">
+                        <img src="img/pertemuan-antara-dpga-dengan-astel-selaku-pemegang-saham-anak-perusahaan-provis-garuda.jpeg"
+                            alt="" class="img-fluid">
+                    </a>
+                </div>
+                <div class="col-md-3 my-3 galery-img">
+                    <a href="">
+                        <img src="img/Gallery-Page-2.jpg" alt="" class="img-fluid">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- End Galerry -->
+
 
     <!-- contact -->
 
 
-    <section id="contact">
-        <div class="container">
+    <section id="contact" class="pt-5">
+        <div class="container m-5">
             <div class="row text-center">
                 <div class="col">
                     <h2>Contact Me</h2>
@@ -196,9 +261,9 @@
                             <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
                                 name="pesan">
                         </div>
-                        <button type="submit" class="btn btn-primary btn-kirim">Submit</button>
+                        <button type="submit" class="btn btn-warning btn-kirim">Submit</button>
 
-                        <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+                        <button class="btn btn-warning btn-loading d-none" type="button" disabled>
                             <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                             Loading...
                         </button>
@@ -208,7 +273,7 @@
             </div>
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#0d6efd" fill-opacity="1"
+            <path fill="#fd7e14" fill-opacity="1"
                 d="M0,64L30,101.3C60,139,120,213,180,240C240,267,300,245,360,213.3C420,181,480,139,540,133.3C600,128,660,160,720,160C780,160,840,128,900,112C960,96,1020,96,1080,117.3C1140,139,1200,181,1260,192C1320,203,1380,181,1410,170.7L1440,160L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z">
             </path>
         </svg>
@@ -219,7 +284,7 @@
 
     <!-- footer -->
 
-    <footer class="bg-primary text-light text-center">
+    <footer class=" text-light text-center" style="background-color: #fd7e14;">
         <p>Create White <i class="bi bi-heart-fill"></i> by
             <a href="https://www.youtube.com/watch?v=LkR-9Z1sle8&list=PLFIM0718LjIV46XyERoDIlBWl2tMmmm8X"
                 class="fw-bold text-light">Luki irwanto</a>
@@ -234,6 +299,34 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
+    <script>
+        const galleryImg = document.querySelectorAll(".galery-img");
+        galleryImg.forEach((img, i) => {
+            img.dataset.aos = "fade-down";
+            img.dataset.aosDelay = i * 150;
+            img.dataset.aosDuration = 1000;
+
+        })
+
+        AOS.init({
+            once: true,
+        });
+    </script>
+
+    <!-- GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/TextPlugin.min.js"></script>
+    <script>
+        gsap.registerPlugin(TextPlugin)
+        gsap.to(".lead", {duration:3.5, delay: 1.5,text: "WEB APPLICATION || UI/UX DESIGN || APP APPLICATION",ease: "none"});
+        gsap.from(".jumbotron img", { opacity: 0, y: 100, duration: 2.5 });
+        gsap.from(".navbar", { opacity: 0, y: "-100%", duration: 1.5, ease: "bounce" });
+        gsap.from(".name-company", { opacity: 0, x: 50, duration: 2, delay: 0.5, ease: "bounce" });
+    </script>
 
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbxDw-zh2c-qMGRjC0j9wm_MAwVQOlG93LwUbNk3eBtGMUlRsX1xdeHkGcx65ZQm07jcDA/exec'
