--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
-    <title>AEROFOX CAMPENY</title>
+    <title>AEROFOX COMPANY</title>
 </head>
 
 <body id="home">
@@ -51,12 +51,12 @@
 
     <!-- jumbotron -->
 
-    <section class="jumbotron text-center my-5" style="background-color: #fd7e14; padding: 0;">
+    <section class="jumbotron text-center my-5 pt-5" style="background-color: #fd7e14; padding: 0;">
         <img src="img/pngtree-fox-logo-vector-png-image_9125106.png" width="200" alt="logo-profil"
             class="rounded-circle my-5">
-        <h1 class="name-company display-4">AEROFOX COMPENY</h1>
-        <p class="lead"></p>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <h1 class="name-company display-4 fs-1 fw-bold text-white">AEROFOX COMPENY</h1>
+        <p class="lead text-white"></p>
+        <svg style="margin-bottom: -5px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#fff" fill-opacity="1"
                 d="M0,320L30,282.7C60,245,120,171,180,170.7C240,171,300,245,360,261.3C420,277,480,235,540,213.3C600,192,660,192,720,197.3C780,203,840,213,900,186.7C960,160,1020,96,1080,96C1140,96,1200,160,1260,197.3C1320,235,1380,245,1410,250.7L1440,256L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z">
             </path>
@@ -78,19 +78,13 @@
                 </div>
             </div>
             <div class="row d-flex justify-content-center my-3">
-                <div class="col-md-6 text-center fs-4 mt-3" data-aos="fade-right" data-aos-duration="1000">Lorem ipsum
-                    dolor sit, amet consectetur adipisicing elit.
-                    Cumque impedit, magni ipsa quod atque eum sapiente earum labore possimus laboriosam consequatur!
-                    Facilis doloremque.</div>
-                <div class="col-md-6 text-center fs-4 mt-3" data-aos="fade-left" data-aos-duration="1000"> Lorem ipsum
-                    dolor sit amet consectetur adipisicing elit.
-                    Ullam similique adipisci
-                    itaque illum odit esse in atque cupiditate deleniti porro alias ipsa consequatur, molestias culpa.
+                <div class="col-md-6 text-center fs-4 mt-3" data-aos="fade-right" data-aos-duration="1000">Tahukan anda, Sebuah Website dapat membantu Anda dalam menjalankan bisnis yang lebih efisien. Website yang menarik yang terkait dengan topik yang relevan dengan layanan yang Anda tawarkan dapat membantu Bisnis Anda mendapatkan peluang banyak client.</div>
+                <div class="col-md-6 text-center fs-4 mt-3" data-aos="fade-left" data-aos-duration="1000"> Website juga dapat membantu meningkatkan brand awareness (ketahuan) layanan Anda. Dengan mempublikasikan jasa atau prodak yang bermanfaat.Anda dapat membangun kepercayaan pembaca terhadap layanan Anda dan menunjukkan keahlian Anda di bidang pembuatan website.
                 </div>
             </div>
 
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <svg style="margin-bottom: -3px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#fd7e14" fill-opacity="1"
                 d="M0,192L30,181.3C60,171,120,149,180,149.3C240,149,300,171,360,149.3C420,128,480,64,540,64C600,64,660,128,720,138.7C780,149,840,107,900,85.3C960,64,1020,64,1080,90.7C1140,117,1200,171,1260,213.3C1320,256,1380,288,1410,304L1440,320L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z">
             </path>
@@ -105,11 +99,11 @@
         <div class="container m-5">
             <div class="row text-center">
                 <div class="col">
-                    <h2>SERVICE</h2>
+                    <h2 class="text-white">SERVICE</h2>
                 </div>
             </div>
-            <div class="row m-5 justify-content-center">
-                <div class="col-md-4 mb-3  my-4">
+            <div class="row m-5 d-flex justify-content-center">
+                <div class="col-lg-4 col-md-6  mb-3  my-4">
                     <div class="card" data-aos="zoom-in" data-aos-duration="1000">
                         <img src="img/service1.png" class="card-img-top" alt="webdesign">
                         <div class="card-body">
@@ -119,7 +113,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mb-3 my-4">
+                <div class="col-lg-4 col-md-6 mb-3 my-4">
                     <div class="card" data-aos="zoom-in" data-aos-duration="1000">
                         <img src="img/service2.png" class="card-img-top" alt="ui/uxdesign">
                         <div class="card-body">
@@ -129,7 +123,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mb-3 my-4">
+                <div class="col-lg-4 col-md-6 mb-3 my-4">
                     <div class="card" data-aos="zoom-in" data-aos-duration="1000">
                         <img src="img/service3.png" class="card-img-top" alt="appaplication">
                         <div class="card-body">
@@ -139,7 +133,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mb-3 my-4">
+                <div class="col-lg-4 col-md-6 mb-3 my-4">
                     <div class="card" data-aos="zoom-in" data-aos-duration="1000">
                         <img src="img/Data-analytics-Adalah-1-1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -149,7 +143,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mb-3 my-4">
+                <div class="col-lg-4 col-md-6 mb-3 my-4">
                     <div class="card" data-aos="zoom-in" data-aos-duration="1000">
                         <img src="img/tren-keamanan-siber-di-dunia-IT.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -162,7 +156,7 @@
             </div>
         </div>
 
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <svg style="margin-bottom: -3px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#fff" fill-opacity="1"
                 d="M0,96L30,128C60,160,120,224,180,256C240,288,300,288,360,250.7C420,213,480,139,540,106.7C600,75,660,85,720,101.3C780,117,840,139,900,170.7C960,203,1020,245,1080,229.3C1140,213,1200,139,1260,138.7C1320,139,1380,213,1410,250.7L1440,288L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z">
             </path>
@@ -181,44 +175,44 @@
                     <h2>Gallery</h2>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-3 my-3 galery-img">
+            <div class="row d-flex justify-content-center ">
+                <div class="col-md-6 col-lg-3 galery-img p-3">
                     <a href="">
                         <img src="img/MINI-ART-GALLERY_01.jpg" alt="" class="img-fluid">
                     </a>
                 </div>
-                <div class="col-md-3 my-3 galery-img">
+                <div class="col-md-6 col-lg-3 galery-img p-3">
                     <a href="">
                         <img src="img/WhatsApp-Image-2022-03-23-at-9.18.59-PM.jpeg" alt="" class="img-fluid">
                     </a>
                 </div>
-                <div class="col-md-3 my-3 galery-img">
+                <div class="col-md-6 col-lg-3 galery-img p-3">
                     <a href="">
                         <img src="img/ekonomi_bisnis_2019_02_18_175034_big.webp" alt="" class="img-fluid">
                     </a>
                 </div>
-                <div class="col-md-3 my-3 galery-img">
+                <div class="col-md-6 col-lg-3 galery-img p-3">
                     <a href="">
                         <img src="img/pameran-lukisan-di-grey-art-gallery-braga_169.jpeg" alt="" class="img-fluid">
                     </a>
                 </div>
-                <div class="col-md-3 my-3 galery-img">
+                <div class="col-md-6 col-lg-3 galery-img p-3">
                     <a href="">
                         <img src="img/b5e653506659b8e7c668424ae5820197.webp" alt="" class="img-fluid">
                     </a>
                 </div>
-                <div class="col-md-3 my-3 galery-img">
+                <div class="col-md-6 col-lg-3 galery-img p-3">
                     <a href="">
                         <img src="img/2-1.jpg" alt="" class="img-fluid">
                     </a>
                 </div>
-                <div class="col-md-3 my-3 galery-img">
+                <div class="col-md-6 col-lg-3 galery-img p-3">
                     <a href="">
                         <img src="img/pertemuan-antara-dpga-dengan-astel-selaku-pemegang-saham-anak-perusahaan-provis-garuda.jpeg"
                             alt="" class="img-fluid">
                     </a>
                 </div>
-                <div class="col-md-3 my-3 galery-img">
+                <div class="col-md-6 col-lg-3 galery-img p-3">
                     <a href="">
                         <img src="img/Gallery-Page-2.jpg" alt="" class="img-fluid">
                     </a>
@@ -272,7 +266,7 @@
                 </div>
             </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <svg style="margin-bottom: -3px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#fd7e14" fill-opacity="1"
                 d="M0,64L30,101.3C60,139,120,213,180,240C240,267,300,245,360,213.3C420,181,480,139,540,133.3C600,128,660,160,720,160C780,160,840,128,900,112C960,96,1020,96,1080,117.3C1140,139,1200,181,1260,192C1320,203,1380,181,1410,170.7L1440,160L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z">
             </path>
