--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section class="jumbotron text-center my-5 pt-5" style="background-color: #fd7e14; padding: 0;">
         <img src="img/pngtree-fox-logo-vector-png-image_9125106.png" width="200" alt="logo-profil"
             class="rounded-circle my-5">
-        <h1 class="name-company display-4 fs-1 fw-bold text-white">AEROFOX COMPENY</h1>
+        <h1 class="name-company display-4 fs-1 fw-bold text-white">AEROFOX COMPANY</h1>
         <p class="lead text-white"></p>
         <svg style="margin-bottom: -5px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#fff" fill-opacity="1"
